@@ -198,7 +198,43 @@
       <applyto>/apps/procman/cpu_color</applyto>
       <owner>procman</owner>
       <type>string</type>
-      <default>#f25915e815e8</default>
+      <default>#FF0000</default>
+      <locale name="C">
+        <short>Default graph cpu color</short>
+        <long></long>
+      </locale>
+      </schema>
+      
+      <schema>
+      <key>/schemas/apps/procman/cpu_color1</key>
+      <applyto>/apps/procman/cpu_color1</applyto>
+      <owner>procman</owner>
+      <type>string</type>
+      <default>#00FF00</default>
+      <locale name="C">
+        <short>Default graph cpu color</short>
+        <long></long>
+      </locale>
+      </schema>
+      
+      <schema>
+      <key>/schemas/apps/procman/cpu_color2</key>
+      <applyto>/apps/procman/cpu_color2</applyto>
+      <owner>procman</owner>
+      <type>string</type>
+      <default>#0000FF</default>
+      <locale name="C">
+        <short>Default graph cpu color</short>
+        <long></long>
+      </locale>
+      </schema>
+      
+      <schema>
+      <key>/schemas/apps/procman/cpu_color3</key>
+      <applyto>/apps/procman/cpu_color3</applyto>
+      <owner>procman</owner>
+      <type>string</type>
+      <default>#FFFF00</default>
       <locale name="C">
         <short>Default graph cpu color</short>
         <long></long>
@@ -210,7 +246,7 @@
       <applyto>/apps/procman/mem_color</applyto>
       <owner>procman</owner>
       <type>string</type>
-      <default>#f25915e815e8</default>
+      <default>#FF0000</default>
       <locale name="C">
         <short>Default graph mem color</short>
         <long></long>
@@ -222,7 +258,7 @@
       <applyto>/apps/procman/swap_color</applyto>
       <owner>procman</owner>
       <type>string</type>
-      <default>#212fe32b212f</default>
+      <default>#00FF00</default>
       <locale name="C">
         <short>Default graph swap color</short>
         <long></long>
