@@ -1,3 +1,11 @@
+2003-11-26  Kevin Vandersloot 
+
+	* interface.c, load-graph.c, procman.c: Add support for smp
+	systems. Should fix bug #91363
+	
+	* proctable.c: allow the columns to be shrunk to any size regardless
+	of the colum label
+
 2003-11-16  Havoc Pennington  <hp@redhat.com>
 
 	* proctable.c: display X Server Memory column, and add it to 
